Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Case_Per_Suite__c/Selenium_Test_Case_Per_Suite__c.object-meta.xml
<CustomObject>
    <label>Selenium Test Case per Suite</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selenium Test Cases per Suite</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>