Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Case_Per_Suite__c/fields/Selenium_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Case__c</fullName>
    <label>Selenium Test Case</label>
    <referenceTo>Selenium_Test_Case__c</referenceTo>
    <relationshipLabel>Selenium Test Cases per Suite</relationshipLabel>
    <relationshipName>Selenium_Test_Cases_Per_Suite</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>