Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Case_Per_Suite__c/fields/Selenium_Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Suite__c</fullName>
    <label>Selenium Test Suite</label>
    <referenceTo>Selenium_Test_Suite__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Selenium_Test_Cases_Per_Suite</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>